--- a/boilerplate/config/index.html
+++ b/boilerplate/config/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <link rel="stylesheet" href="test.css" />
+    <link rel="stylesheet" href="../test/test.css" />
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="jspm.config.js"></script>
